# UPS

./: .gitignore  README.md
A21B0074P/client/: pom.xml
A21B0074P/server/: CMakeLists.txt
A21B0074P/server/src/: BlackjackGame.cpp  BlackjackGame.hpp  Card.cpp  Card.hpp  ClientGuard.cpp  ClientGuard.hpp  ClientInfo.cpp  ClientInfo.hpp  ClientManager.cpp  ClientManager.hpp  Constants.cpp  Constants.hpp  Lobby.cpp  Lobby.hpp  LobbyManager.cpp  LobbyManager.hpp  Main.cpp  MessageProcessor.cpp  MessageProcessor.hpp  Socket.cpp  Socket.hpp  User.cpp  User.hpp  Utils.cpp  Utils.hpp  config.txt
bonus_1/1/: client
bonus_1/2/: client  client.c
bonus_1/3/: client.c
cv/: .gitignore
cv/bonus_2/: client  client.c  server  server.c
sandboxes/sb2/: CMakeLists.txt  CMakeSettings.json  main-server.cpp  main.cpp
sandboxes/sb2/config/: log4cxx.properties
sp/poker/server/: CMakeLists.txt  README.md
sp/poker/server/libs/json/: ChangeLog.md
sp/poker/server/libs/json/include/nlohmann/: adl_serializer.hpp  byte_container_with_subtype.hpp  json.hpp  json_fwd.hpp
sp/poker/server/libs/json/include/nlohmann/detail/: exceptions.hpp  json_pointer.hpp
sp/poker/server/libs/json/single_include/nlohmann/: json.hpp  json_fwd.hpp
sp/poker/server/libs/json/tests/abi/include/nlohmann/: json_v3_10_5.hpp
sp/poker/server/src/: server  server.cpp
sp/poker/server/src/api/: type.hpp
sp/poker/server/src/api/mapper/: mapper.hpp
sp/poker/server/src/api/payload/: payload.cpp  payload.hpp
sp/poker/server/src/api/request/: Request.hpp  request.cpp  request.hpp
sp/poker/server/src/base/: base.cpp  base.hpp
sp/poker/server/src/connection/: status.hpp  subtype.cpp  type.cpp
sp/poker/server/src/connection/enums/: status.cpp  status.hpp  type.cpp  type.hpp
sp/poker/server/src/connection/header/: header.cpp  header.hpp
sp/poker/server/src/connection/message/: message.hpp
sp/poker/server/src/connection/payload/: payload.cpp  payload.hpp
sp/poker/server/src/connection/request/: request.cpp  request.hpp
sp/poker/server/src/main/cpp/: server-main.cpp  server.cpp
sp/poker/server/src/main/cpp/async/: blocking_queue.hpp  safe_queue.hpp
sp/poker/server/src/main/cpp/base/: base.hpp
sp/poker/server/src/main/cpp/config/: configuration.cpp
sp/poker/server/src/main/cpp/connection/: connection.hpp
sp/poker/server/src/main/cpp/connection/consts/: consts.hpp
sp/poker/server/src/main/cpp/connection/header/: header.cpp  header.hpp
sp/poker/server/src/main/cpp/connection/message/: message.cpp
sp/poker/server/src/main/cpp/connection/message/enums/: status.cpp
sp/poker/server/src/main/cpp/connection/message/header/: header.cpp
sp/poker/server/src/main/cpp/connection/message/payload/: payload.cpp  payload.hpp
sp/poker/server/src/main/cpp/connection/payload/: payload.cpp
sp/poker/server/src/main/cpp/server/: server.cpp  server.hpp
sp/poker/server/src/main/cpp/server/connection/: connection.cpp  connection.hpp
sp/poker/server/src/main/cpp/server/connection/consts/: consts.cpp
sp/poker/server/src/main/cpp/server/connection/message/: message.cpp  message.hpp
sp/poker/server/src/main/cpp/server/connection/message/enums/: status.hpp  type.hpp
sp/poker/server/src/main/cpp/server/connection/message/header/: header.cpp  header.hpp
sp/poker/server/src/main/cpp/server/connection/message/payload/: payload.hpp
sp/poker/server/src/main/cpp/utils/: global.cpp  global.hpp  utils.hpp
sp/poker/server/src/main/resources/config/: config.ini
sp/poker/server/src/main/resources/config/logging/: log4cxx.xml
sp/poker/server/src/utils/: utils.cpp
sp/reversi/server/: CMakeLists.txt
sp/reversi/server/src/main/cpp/: main.cpp
sp/reversi/server/src/main/cpp/base/: base.cpp  base.hpp
sp/reversi/server/src/main/cpp/config/: configuration.hpp
sp/reversi/server/src/main/cpp/game/lobby/: lobby.cpp  lobby.hpp
sp/reversi/server/src/main/cpp/game/player/: player.cpp  player.hpp
sp/reversi/server/src/main/cpp/reversi/: reversi_game.cpp  reversi_game.hpp
sp/reversi/server/src/main/cpp/reversi/board/: board.cpp  board.hpp
sp/reversi/server/src/main/cpp/reversi/config/: game_config.cpp  game_config.hpp
sp/reversi/server/src/main/cpp/reversi/consts/: game_consts.cpp  game_consts.hpp
sp/reversi/server/src/main/cpp/reversi/engine/: game_engine.cpp  game_engine.hpp  player_code.cpp  player_code.hpp  reversi_engine.cpp  reversi_engine.hpp
sp/reversi/server/src/main/cpp/server/: server.cpp  server.hpp
sp/reversi/server/src/main/cpp/server/config/: server_config.cpp  server_config.hpp
sp/reversi/server/src/main/cpp/server/connection/: client_connection.cpp  client_connection.hpp  client_info.cpp  client_info.hpp
sp/reversi/server/src/main/cpp/server/connection/client/: client.cpp  client.hpp
sp/reversi/server/src/main/cpp/server/connection/client/enums/: flow_state.cpp  flow_state.hpp
sp/reversi/server/src/main/cpp/server/connection/connection_config/: connection_config.cpp  connection_config.hpp
sp/reversi/server/src/main/cpp/server/connection/consts/: consts.cpp
sp/reversi/server/src/main/cpp/server/connection/message/: message.cpp  message.hpp
sp/reversi/server/src/main/cpp/server/connection/message/enums/: status.cpp  status.hpp  type.cpp  type.hpp
sp/reversi/server/src/main/cpp/server/connection/message/header/: header.cpp  header.hpp
sp/reversi/server/src/main/cpp/server/connection/message/payload/: payload.cpp  payload.hpp
sp/reversi/server/src/main/cpp/server/managers/: client_manager.cpp  client_manager.hpp  lobby_manager.cpp  lobby_manager.hpp  message_manager.cpp  message_manager.hpp
sp/reversi/server/src/main/cpp/utils/: utils.cpp  utils.hpp
sp/reversi/server/src/main/resources/: requests.txt
sp/reversi/server/src/main/resources/config/: config.ini
sp/reversi/server/src/main/resources/config/logging/: log4cxx.xml
sp/reversi/server/src/test/cpp/: test.cpp  test.hpp
sp/reversi/server/src/test/cpp/server/connection/message/header/: header_test.cpp  header_test.hpp
sp/reversi/server/src/test/cpp/test_utils/: test_utils.cpp  test_utils.hpp
(+252 files in other folders)
